[refs #0048] Fix todo tasks list not working on firefox

--- a/src/scss/components/_components.todo.scss
+++ b/src/scss/components/_components.todo.scss
@@ -2,64 +2,98 @@
    #TODO
    ========================================================================== */
 
+/**
+ * 1. Get rid of white space cause by using `inline-flex`.
+ * 
+ * Read More: https://goo.gl/ajXW52
+ */
+
 .c-todo {
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
 	padding: rem(20px) $spacer;
 	border-top: $base-border-width solid $base-border-color;
-}
+	font-size: 0; /* [1] */
+	font-weight: $choice-font-weight;
 
-.c-todo__content {
-	display: flex;
-	align-items: center;
-	transition: all .3s;
-	color: $heading-color;
-	font-size: $text-font-size;
-	cursor: pointer;
+	/**
+	 * Disabled state
+	 *
+	 * NOTE: `disabled` attribute must be added to <input>
+	 */
+	&.is-disabled {
+		.c-todo__label {
+			color: $choice-disabled-color;
+			cursor: default;
 
-	.c-todo.is-completed & {
-		text-decoration: line-through;
-		opacity: .5;
+			&::before {
+				border-color: $choice-disabled-border-color;
+				background-color: $choice-disabled-background-color;
+				text-decoration: none;
+			}
+		}
 	}
 }
 
-
 /**
- * 1. Hide default checkbox and create a new designed checkbox.
- * 2. Setup check mark icon, based on base icon font.
+ * 1. Hide default input and create a customized input.
+ * 2. Align the customized input with label.
  */
+.c-todo__input { /* [1] */
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
+	white-space: nowrap;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
 
-.c-todo__input {
-	display: inline-block;
-	margin: 0 $spacer-small 0 0;
-	cursor: pointer;
-	visibility: hidden; /* [1] */
-
-	&::after { /* [1] */
-		display: inline-block;
+	& + .c-todo__label {
+		display: inline-flex;
 		position: relative;
-		top: -3px;
+		align-items: center;
+		padding-left: rem(25px);
+		color: $heading-color;
+		font-size: $text-font-size;
+		cursor: pointer;
+
+		.c-todo.is-completed & {
+			text-decoration: line-through;
+			opacity: .5;
+ 		}
+	}
+
+	& + .c-todo__label::before {
+		display: inline-block;
+		position: absolute;
+		top: 2px; /* [2] */
+		left: 0;
 		width: 16px;
 		height: 16px;
+		margin: 0 15px 0 0;
 		transition: all .3s;
 		border: $base-border-width solid $grey-600;
 		border-radius: 100%;
 		background-color: $white;
 		color: $white;
+		font-family: $base-icon-font;
+		font-size: 10px;
 		line-height: 15px;
 		text-align: center;
+		text-decoration: none;
 		content: "";
-		visibility: visible; /* [1] */
+		visibility: visible; /* [2] */
 	}
 
-	&:checked::after {
+	// custom designed checkbox
+	&:checked + .c-todo__label::before {
 		border-color: $grey-600;
 		background-color: $grey-600;
 		color: $white;
-		font-family: $base-icon-font; /* [2] */
-		font-size: 10px; /* [2] */
-		content: "\f00c";// fa-check
+		content: "\f00c"; // fa-check
 	}
 }
 
@@ -68,7 +102,7 @@
    ========================================================================== */
 
 /**
- * Todo task displayed as a stream.
+ * Todo task displayed as a stream. Used in active-projects.html page.
  */
 
 .c-todo-stream {
